fixed overflow problem, home and searcg page finished

--- a/website/static/main.scss
+++ b/website/static/main.scss
@@ -8,7 +8,6 @@ $body-color-dark: rgb(245, 245, 245);
 @import "./node_modules/@fortawesome/fontawesome-free/css/all.css";
 @import "https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap";
 
-/* Custom bootstrap */
 body {
     font-family: 'Montserrat', sans-serif;
 }
@@ -32,6 +31,14 @@ body {
     transform: scale(1.05);
 }
 
+.truncated-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
 .card {
     overflow: hidden;
 }
@@ -40,7 +47,6 @@ body {
     font-weight: 600;
 }
 
-/* Custom fontawesome */
 .fa-heart {
     color: $primary;
 }
